hphp/hack/test/typecheck/first_class_polymorphism/polymorphic_lambda_not_enabled_legacy.php
<?hh

function foo(): void {
  $_ =  function<T>(T $x):T use() { return $x; };
}
